syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup;
import "google/protobuf/timestamp.proto";

service KeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}
service KeyManagerRemoveGrpcService{
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}
service KeyManagerBuscaChaveGrpcService{
  rpc buscaChave(BuscaChavePixRequest) returns (BuscaChavePixResponse) {}
}
service KeyManagerListaChavesGrpcService{
  rpc listaChaves(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

//requisitos para requerir uma exclusao
message RemoveChavePixRequest {
  string pixId = 1;
  string clienteId = 2;
}

//requisitos da respsota de uma exclusao bem sucedida
message RemoveChavePixResponse {
  string pixId = 1;
  string clienteId = 2;
  string mensagem = 3;
}


//Enum para o tipo de chave a ser cadastrado
//UNKNOWN é para não deixarmos o default como algum tipo valido do nosso sistema
enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

//Enum para o tipo de conta a ser
//UNKNOWN é para não deixarmos o default como algum tipo valido do nosso sistema
enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

//Requisitos para registrar uma chave pix
message RegistraChavePixRequest {
  string clienteId        = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

//resposta que deve ser retornado pelo sistema
message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}

//requisitos para buscar uma chave
message BuscaChavePixRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId     = 2;
  }

  //um dos tipos, 1 = chamada interna (cliente+pixid) 2 = chamada externa (valor da chave)
  oneof filtro {
    FiltroPorPixId pixId  = 1;
    string chave          = 2;
  }
}

//resposta ao buscar uma chave
message BuscaChavePixResponse {

  message ChavePix {

    //dentro da chave temos as informacoes da conta
    message ContaInfo {
      TipoDeConta tipo     = 1;
      string instituicao   = 2; /** ITAU UNIBANCO */
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }
    //atributos referentes a uma chave
    TipoDeChave tipo        = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }
  //atributos referente ao cliente+pix
  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

message ListaChavesPixRequest {
  string clienteId = 1;
}

message ListaChavesPixResponse{
  message ChavePix {
    string pixId            = 1;
    TipoDeChave tipoDeChave = 2;
    string chave            = 3;
    TipoDeConta tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }
  string clienteId         = 1;
  repeated ChavePix chaves = 2;
}